# PlanetClicker

./: .gitignore  CHANGELOG.org  Makefile  README.md  README.org  TODO.org  flake.nix  makefile  pyproject.toml  readme.org  shell.nix  test.py  todo.org
asset/: README.md
asset/font/donation/: info.txt
data/: README.md  config.toml  font.toml  game.toml  graphics.toml  keys.toml  planets.toml  settings.toml  ui.toml
docs/: design.org  notes.org
planetclicker/: __init__.py  __main__.py  asset.py  color.py  command.py  config.py  data.py  font.py  game.py  logger.py  settings.py  util.py
planetclicker/asset/: color.py  font.py  sprite.py  sprite_sheet.py  spritesheet.py
planetclicker/data/: __init__.py  loader.py  namespace.py  parser.py
planetclicker/level/: __init__.py
planetclicker/model/: __init__.py  identity.py  level.py  planet.py  position.py  solar_system.py  upgrade.py
planetclicker/object3d/: cube.py  icosahedron.py  object.py
planetclicker/scene/: __init__.py  clicker.py  generate.py  main.py  manager.py  planets.py  scene.py  settings.py  title.py
planetclicker/sprite/: animated_sprite.py  bg_star.py  planet.py  solar_system.py  sprite_sheet.py
planetclicker/sprite/circle/: bg_star.py
planetclicker/sprite/hidden/: planet.py  solar_system.py  sprite_sheet.py  sun.py
planetclicker/sprite/sphere/: planet.py  sun.py
planetclicker/ui/: button.py  element.py  panel.py  uibutton.py  uielement.py
src/: __init__.py  __main__.py  asset.py  assets.py  config.py  data.py  game.py  game_data.py  planet.py  test.py
src/asset/: __init__.py  color.py  font.py
src/model/: solar_system.py
src/particle/: bg_star.py
src/planet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scene/: __init__.py  clicker.py  main.py  manager.py  planets.py  settings.py  title.py
src/sprite/: planet.py  planet_group.py  solar_system.py
src/ui/: button.py  panel.py  scrollrect.py  uibutton.py  uielement.py
tests/: minimal_pygame.py  test_config.py  test_data.py  test_loader.py  test_minimal_pygame.py  test_planet.py  test_settings.py  test_spritesheet.py  test_title_menu.py
tests/features/steps/: tutorial.py
tests/files/: test.toml
tests_hidden/: minimal_pygame.py  test_config.py  test_data.py  test_spritesheet.py
(+5 files in other folders)
