[project]
name = "planetclicker"
version = "0.0.1"

[project.urls]
repository = "https://github.com/wwafflless/PlanetClicker"

[tool.poetry]
name = "planetclicker"
version = "0.0.1"
description = "Clicker game."
readme = "README.md"
# requires-python = ">=3.12"
authors = [
  "ben",
  "adam",
]

[tool.poetry.scripts]
main = "planetclicker.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^2.1.3"
behave = "^1.2.6"
pygame-ce = "^2.5.2"
pytest = "^8.3.3"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
minversion = "6.0"
addopts = [
"--capture=no",
"--ignore=**/hidden/"
]
testpaths = ["tests"]

[tool.pyright]
pythonpath = "."
include = ["planetclicker", "tests"]
exclude = ["**/__pycache__", "**/hidden"]
executionEnvironments = [
  { root = "." },
]
