[project]
name = "planetclicker"
version = "0.1"

dependencies = [
  # "click",
  "numpy",
  "noise",
  # "beautifulsoup4",
  "pygame-ce",
  "matplotlib",
  "pytest"
]

# [project.optional-dependencies]
# test = [
#   "pytest < 5.0.0",
#   "pytest-cov[all]"
# ]

# [project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
# repository = "https://github.com"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
main = "planetclicker:main"
